Upgraded to java 8 - EDELIVERY-3200